fix: popup z-index (main page)

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -595,6 +595,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
