--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -391,6 +391,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
